--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@types/jest": "^24.0.25",
     "@types/node": "^12.12.24",
     "@types/react": "^16.9.17",
+    "@types/react-color": "^3.0.4",
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
     "firebase": "^8.1.2",
     "ionicons": "^5.0.0",
     "react": "^16.13.0",
+    "react-color": "^2.19.3",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.2",
     "react-router": "^5.1.2",
