Fetch/save color to firebase

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@capacitor/core": "2.4.4",
     "@ionic/react": "^5.0.7",
     "@ionic/react-router": "^5.0.7",
     "@testing-library/jest-dom": "^4.2.4",
@@ -50,6 +51,8 @@
   },
   "description": "An Ionic project",
   "devDependencies": {
-    "@types/react-redux": "^7.1.11"
+    "@capacitor/cli": "2.4.4",
+    "@types/react-redux": "^7.1.11",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
