--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "socialColor",
+  "name": "SocialColor",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
@@ -33,7 +33,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "resources": "cordova-res ios --skip-config --copy"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -54,6 +55,7 @@
   "devDependencies": {
     "@capacitor/cli": "2.4.4",
     "@types/react-redux": "^7.1.11",
+    "cordova-res": "^0.15.2",
     "redux-devtools-extension": "^2.13.8"
   }
 }
