--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,11 @@ yarn-debug.log*
 yarn-error.log*
 
 firebaseConfig.ts
+
+# ionic resources
+resources/android/icon
+resources/android/splash
+resources/ios/icon
+resources/ios/splash
+resources/windows/icon
+resources/windows/splash
