--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,6 +1,6 @@
 {
   "appId": "com.cyberward.socialColor",
-  "appName": "socialColor",
+  "appName": "SocialColor",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "build",
